--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@
 @use 'components/card';
 @use 'components/chip';
 @use 'components/buttons';
+@use 'components/tooltip';
 
 // ==========================
 // Utilities
